--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,17 +1,6 @@
 name: Continuous Integration
 on: [push]
 jobs:
-  CI_Steps:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Code checkout
-        uses: actions/checkout@v4
-      - run: echo OK
-        name: Code Build
-      - run: echo OK
-        name: Code Test
-      - run: echo OK
-        name: Code Review
-      - run: echo OK
-        name: Release Software
-
+  call-workflow-passing-data:
+    uses:
+      devopsb78/github-reusable-workflows/.github/workflows/ci.yml@main
