--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,3 +4,8 @@ jobs:
   call-continuous-integration-reusable:
     uses:
       devopsb78/github-reusable-workflows/.github/workflows/ci.yml@main
+    with:
+      project_name: expense-backend
+      npm_install: true
+    secrets: inherit
+
