adding secrets to sonarqube

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,6 +6,6 @@ jobs:
       devopsb78/github-reusable-workflows/.github/workflows/ci.yml@main
     with:
       project_name: expense-backend
-      npm_install: true
-    secrets: inherit
+#      npm_install: true
+#    secrets: inherit
 
