--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,6 +9,6 @@ jobs:
       devopsb78/github-reusable-workflows/.github/workflows/release.yml@main
     with:
       project_name: expense-backend
+      release_archive_file: "*.js package.json schema VERSION"
       npm_install: true
     secrets: inherit
-
