Dockerfile setup for backend

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.17.1",
     "mysql2": "latest",
     "node-fetch": "^2.6.1",
-    "moment" : "latest"
+    "moment" : "latest",
+    "newrelic" : "latest"
   }
 }
